--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,19 @@ body {
   /* @apply bg-primary; */
   @apply bg-black;
 }
+
+@font-face {
+  font-family: "AvenirNext";
+  src: url("./fontes/avenir-next-similar/karu-font-family.woff2")
+    format("woff2");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "AvenirNext";
+  src: url("./fontes/avenir-next-similar/karu-font-family.woff2")
+    format("woff2");
+  font-weight: 700;
+  font-style: normal;
+}
